--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,6 +1,6 @@
 {
     "extDescription": {
-        "message": "Custom Google™ Menu hilft Ihnen Ihre Links für die Google™ Dienstleistungen auf der Gmail™ Seite zu organisieren. Jeder Link wird als ein Kästchen dargestellt und so ordnet man diese Kästchen einfach per Drag-and-Drop an.",
+        "message": "Custom Google™ Menu hilft Ihnen Ihre Links für die Google™ Dienstleistungen auf den Google™ Seiten zu organisieren. Jeder Link wird als ein Kästchen dargestellt und so ordnet man diese Kästchen einfach per Drag-and-Drop an.",
         "description": "Extension description."
     }
 }
