--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
     "extDescription": {
-        "message": "Custom Google™ Menu aims to help you arrange links to Google™ services on the Gmail™ page. Links are represented as boxes and the new layout is created by dragging and dropping these boxes.",
+        "message": "Custom Google™ Menu allows you to rearrange links to Google™ services on any Google™ page. Links are represented as boxes and the new layout is created by dragging and dropping these boxes.",
         "description": "Extension description."
     }
 }
