--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,6 +1,6 @@
 {
     "extDescription": {
-        "message": "Custom Google™ Menu поможет вам изменить расположение ссылок на сервисы Google™ на странице Gmail™. Ссылки представляются в виде прямоугольников, и новая структура задается перетаскиванием этих прямоугольников с помощью мышки.",
+        "message": Custom Google™ Menu позволяет вам изменить структуру навигационной панели на страницах сервисов Гугла. Ссылки представляются в виде прямоугольников, и новая структура задается перетаскиванием этих прямоугольников с помощью мышки.",
         "description": "Extension description."
     }
 }
