Improved descriptive information

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@ v 1.1
   * Opera: added option to show/hide popup button on the toolbar.
   * Works on any Google page, not only Gmail.
   * Added Flattr donation button.
+  * Added Yandex.Metrika statistics.
   - Does not work on Google Apps for Business.
   
 v 1.0 13.10.2011
