Post release fixes (v1.1)
* Remove watch.js. It should be linked directly from Yandex.
* Fix a syntax error in Russian localization

--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,6 +1,6 @@
 {
     "extDescription": {
-        "message": Custom Google™ Menu позволяет вам изменить структуру навигационной панели на страницах сервисов Гугла. Ссылки представляются в виде прямоугольников, и новая структура задается перетаскиванием этих прямоугольников с помощью мышки.",
+        "message": "Custom Google™ Menu позволяет вам изменить структуру навигационной панели на страницах сервисов Гугла. Ссылки представляются в виде прямоугольников, и новая структура задается перетаскиванием этих прямоугольников с помощью мышки.",
         "description": "Extension description."
     }
 }
