--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v 1.2 19.04.2012
+  * Added support for new GMail interface.
+  * Removed donation buttons from popup.
+  * Removed flattr button from options page.
+  
 v 1.1
   * Opera: added option to show/hide popup button on the toolbar.
   * Works on any Google page, not only Gmail.
