--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v 1.3 24.05.2012
+  * Chrome: CGM works again on GMail page (release 1.2 broke it).
+  
 v 1.2 23.05.2012
   * Added support for new GMail interface.
   * Removed donation buttons from popup.
